--- a/404.html
+++ b/404.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/favicon.png">
+    <link rel="apple-touch-icon" href="images/favicon.png">
     <title>OpenST | 定位失败</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -57,7 +59,7 @@
             </h1>
             <div class="h-px w-24 bg-[--brand]/30 mx-auto"></div>
             <p class="text-white/50 leading-relaxed text-sm">
-                档案库无法定位该稿件。坐标 <span id="error-id" class="text-[--brand] font-mono"></span> 可能是无效的，或者该稿件已被下架。
+                页面 <span id="error-id" class="text-[--brand] font-mono"></span> 可能是无效的。
             </p>
         </div>
 
