--- a/wiki/wiki_edit.html
+++ b/wiki/wiki_edit.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit Wiki - OpenST</title>
+    <link rel="icon" href="../images/favicon.png"></link>
+    <link rel="apple-touch-icon" href="../images/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
