--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </a>
 
-        <a href="archive.html" class="portal-card archive-hover group rounded-[2.5rem] p-12">
+        <a href="archive.html" target="_blank" class="portal-card archive-hover group rounded-[2.5rem] p-12">
             <h2 class="text-2xl font-semibold mb-4 text-[#e5e5e7]">档案馆</h2>
             <p class="text-gray-500 text-sm leading-relaxed mb-10 max-w-xs">归档了大量优秀的作品，欢迎游览</p>
             <div class="text-[#40B5AD] opacity-60 group-hover:opacity-100 transition-opacity text-xs font-medium tracking-wide">
